2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-06	Ilya Alexeev <ilya@continuum.ru>

	* m68360.h: Correct the order of fields in the ethernet structure
	to account for the typo in MC68360UM (page 7-248).

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf-2.57 + automake-1.7.2.
	* Makefile.am: Eliminate C_O_FILES, S_O_FILES, libscorecpu_a_OBJECTS.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Removed warnings.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-26	Eric Norum <eric.norum@usask.ca>

	* cpu_asm.S: More PR267 tinkering which eliminates some conditional
	compilation.

2002-08-14	Brett Swimley <brett.swimley@aedinc.net>

	* cpu_asm.S: Per PR267, the _ISR_Handler() function never was modifying
	_ISR_Nest_level, and _Watchdog_Insert() requires this variable
	to be modified to determine if an interrupt may have modified
	the watchdog chain.  Prior to modifying _ISR_Handler(), I had
	a test that would fail if _ISR_Flash was not commented out in
	_Watchdog_Insert().  After this modification was made, my test
	ran flawlessly.

2002-08-05	Joel Sherrill <joel@OARcorp.com>

	* Per PR260 eliminate use of make-target-options.  This impacted
	RTEMS allowing a distinction between the CPU32 and CPU32+ in the
	SuperCore and required that the m68k optimized memcpy be moved
	to libcpu.
	* memcpy.c: Moved to libcpu.
	* Makefile.am: Modified to reflect above.

2002-07-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Build libscorecpu.a instead of rtems-cpu.rel.
